samples/_failures_safe/1761615093_4344d6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e9833250.c: In function ‘main’:
./samples/SAFE/__tmp_e9833250.c:172:9: error: expected expression at end of input
  172 |         case
      |         ^~~~
./samples/SAFE/__tmp_e9833250.c:172:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e9833250.c:172:9: error: expected declaration or statement at end of input
